feat: Add new concurrency chapter with interactive quizzes, introduce custom CSS for quizzes, and include hand-drawn diagrams for concurrency and smart pointers.

--- a/book.toml
+++ b/book.toml
@@ -2,3 +2,6 @@
 title = "Rust HandBook in Spanish"
 authors = ["Matias Ezequiel Pormi"]
 language = "spanish"
+
+[output.html]
+additional-css = ["src/custom.css"]
